tests/snapshots/examples_fixtures/type_system__failing__202_hm_pure_caller_missing_io_e400.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/202_hm_pure_caller_missing_io_e400.flx
== compile ==
failed (compile)
== diagnostics ==
error[E400]: Missing Ambient Effect

Call to `write_log` requires effects `Console, FileSystem, Stdin` in this function signature.

  examples/type_system/failing/202_hm_pure_caller_missing_io_e400.flx:31:5
   |
31 |     write_log("processing")
   |     ^^^^^^^^^
   |     --------- effectful call occurs here

Hint:
  Add `with Console, FileSystem, Stdin` to the enclosing function.
== stdout ==
<not executed>
